--- a/src/Motion_Planning/Trapezoidal/CMakeLists.txt
+++ b/src/Motion_Planning/Trapezoidal/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(
     catkin REQUIRED COMPONENTS
     roscpp
     std_msgs
+    geometry_msgs
     message_generation
     )
 
@@ -14,10 +15,11 @@ find_package(
 generate_messages(
     DEPENDENCIES
     std_msgs
+    geometry_msgs
     )
 
 catkin_package(
-    CATKIN_DEPENDS roscpp std_msgs message_runtime
+    CATKIN_DEPENDS roscpp std_msgs geometry_msgs message_runtime
     )
 
 include_directories(include ${catkin_INCLUDE_DIRS})
@@ -26,7 +28,6 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 set(BINNAME1 trapezoidal_planning)
 
 # Set the source files to use with the executable.
-set(SRCS1 ${SRCS1} src/trapezoidalNode.cpp)
 set(SRCS1 ${SRCS1} src/trapezoidal.cpp)
 
 # Build the executable that will be used to run this node.
