--- a/src/integ_description/package.xml
+++ b/src/integ_description/package.xml
@@ -1,10 +1,12 @@
 <package>
   <name>integ_description</name>
   <version>0.5.0</version>
-  <description>
-    Description for INTEG project at Ecole Centrale de Nantes.
-  </description>
-  <maintainer email="Mahdi.moussabbir.zone@gmail.com">Mahdi Moussabbir</maintainer>
+
+  <description>This package contains a number of URDF tutorials.</description>
+  <author email="davidvlu@gmail.com">David V. Lu!!</author>
+
+  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
+
   <license>BSD</license>
   <url>http://ros.org/wiki/urdf_tutorial</url>
 
