--- a/GKD_models/package.xml
+++ b/GKD_models/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>integ_gcd_models_pkg</name>
+  <name>GKD_models</name>
   <version>0.0.0</version>
-  <description>The integ_gcd_models_pkg package</description>
+  <description>The GKD_models package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
