start to implement a service to replace the input topic in trapezoidalNode

--- a/src/Motion_Planning/Trapezoidal/CMakeLists.txt
+++ b/src/Motion_Planning/Trapezoidal/CMakeLists.txt
@@ -9,6 +9,11 @@ find_package(
     message_generation
     )
 
+add_service_files(
+    FILES
+    WayPoint.srv
+    )
+
 generate_messages(
     DEPENDENCIES
     std_msgs
