--- a/src/integ_gazebo/params/arm_control.yaml
+++ b/src/integ_gazebo/params/arm_control.yaml
@@ -7,8 +7,8 @@ joint_state_controller:
 finger_position_controller:
     type: effort_controllers/JointPositionController
     joint: hand_finger_joint
-    pid: {p: 100.0, i: 0.01, d: 10.0}
+    pid: {p: 100.0, i: 0.01, d: 10.0, antiwindup: true, i_clamp_min: -40.0, i_clamp_max: 40.}
 hand_position_controller:
     type: effort_controllers/JointPositionController
     joint: arm_hand_joint
-    pid: {p: 100.0, i: 0.01, d: 10.0} 
+    pid: {p: 100.0, i: 0.01, d: 10.0, antiwindup: true, i_clamp_min: -40.0, i_clamp_max: 40.} 
