--- a/src/Motion_Planning/Trapezoidal/package.xml
+++ b/src/Motion_Planning/Trapezoidal/package.xml
@@ -17,6 +17,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>roslaunch</build_depend>
 
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
